--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="#radsportclass"class="cursor-effect cursor-effect-velo">
+                        <a href="#radsport" class="cursor-effect cursor-effect-velo">
                             <img src="https://www.instagram.com/p/B0_C0mcBwIF/media?size=l" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Radsport</h5>
