Added my mail and changed icons

--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-12">
-                <a target="_blank" href="https://www.instagram.com/mtb_alexstern/?hl=de">Meine Instagramseite <i class="fab fa-instagram"></i></a>
-              
+            <div class="col-sm-12 icon-links">
+                <a target="_blank" href="https://www.instagram.com/mtb_alexstern/?hl=de"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://github.com/Grasi-code/mywebsite"><i class="fab fa-github"></i></a>
+                <a target="_blank" href="mailto:alexanderstern776@gmail.com"><i class="far fa-envelope"></i></a>
             </div>
         </div>
     </div>
