Added my youtube

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 <a target="_blank" href="https://www.instagram.com/mtb_alexstern/?hl=de"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" href="https://github.com/Grasi-code/mywebsite"><i class="fab fa-github"></i></a>
                 <a target="_blank" href="mailto:alexanderstern776@gmail.com"><i class="far fa-envelope"></i></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCER7RcJEV-QiPdqMt9QF3NQ"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </div>
