--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div id="bitsch" class="col-sm">
                 <h1>Lifestyle</h1>
-                <p>Ich gehe oft auf Reisen und teile sehr gerne meine Erfarungen mit der restlichen Welt.</p>
+                <p>Ich gehe oft auf Reisen und teile sehr gerne meine Erfarungen mit der restlichen Welt. Ich habe schon viele Länder und Städte besucht wie: Barcelona, Brasilien, New York, Miami, Berlin, Wien, Mallorca, Dubai etc. </p>
             </div>
         </div>
         <div class="row">
