--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <img src="https://www.instagram.com/p/B0QrjMFBQM3/media?size=l" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Lifestyle</h5>
-                                <p>Meine Reisen und aktivitäten.</p>
+                                <p>Meine Reisen und Aktivitäten.</p>
                             </div>
                         </a>
                     </div>
@@ -73,7 +73,7 @@
                             <img src="https://www.instagram.com/p/BsQhNPzAxiG/media?size=l" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Wintersport</h5>
-                                <p>Meine aktivitäten im Wintersport.</p>
+                                <p>Meine Aktivitäten im Wintersport.</p>
                             </div>
                         </a>
                     </div>
