--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h1>Wintersport</h1>
                 <p>Seit etwa drei Jahren fahre ich Snowboard, davor fuhr ich noch Ski aber ab dem Zeitpunkt wo ich
                     das Snowboarden entdeckt habe wollte ich nicht mehr Ski fahren. Ich gehe regelmässig mit meinem
-                    Vater im Winter snowboarden nach Hasliberg und Wildhus.</p>
+                    Vater im Winter snowboarden nach Hasliberg, Wildhus,Lenzerheid und Egelberg.</p>
             </div>
         </div>
 
