--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             <div id="Wintersprot" class="col-sm">
                 <h1>Wintersport</h1>
                 <p>Seit etwa drei Jahren fahre ich Snowboard, davor fuhr ich noch Ski aber ab dem Zeitpunkt wo ich
-                    das Snowboarden entdeckt habe wollte ich nicht mehr Ski fahren. Ich gehe regelmässig mit meinem
-                    Vater im Winter snowboarden nach Hasliberg, Wildhus,Lenzerheid und Egelberg.</p>
+                    das Snowboarden entdeckt habe wollte ich nicht mehr Ski fahren. Ich gehe regelmässig mit meiner
+                    Familie im Winter snowboarden nach Hasliberg, Wildhus, Lenzerheide und Egelberg.</p>
             </div>
         </div>
 
