--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 <a target="_blank" href="mailto:alexanderstern776@gmail.com"><i class="far fa-envelope"></i></a>
                 <a target="_blank" href="https://www.youtube.com/channel/UCER7RcJEV-QiPdqMt9QF3NQ"><i class="fab fa-youtube"></i></a>
                 <a target="_blank" href="https://my.playstation.com/profile/grasitube"><i class="fab fa-playstation"></i></a>
+                <a target="_blank" href="https:linkedin.com/in/alexander-stern-9b239019b"></a>"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </div>
