--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h1>Wintersport</h1>
                 <p>Seit etwa drei Jahren fahre ich Snowboard, davor fuhr ich noch Ski aber ab dem Zeitpunkt wo ich
                     das Snowboarden entdeckt habe wollte ich nicht mehr Ski fahren. Ich gehe regelmässig mit meiner
-                    Familie im Winter snowboarden nach Hasliberg, Wildhus, Lenzerheide und Egelberg.</p>
+                    Familie im Winter snowboarden nach Hasliberg, Wildhus, Lenzerheide und Engelberg.</p>
             </div>
         </div>
 
