--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <a href="#bitsch" class="cursor-effect cursor-effect-bitsch audio-bitsch">
-                            <img src="https://www.instagram.com/p/B0QrjMFBQM3/media?size=l" class="d-block w-100" alt="...">
+                            <img src="img/Tauchen1.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Lifestyle</h5>
                                 <p>Meine Reisen und Aktivitäten.</p>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="carousel-item">
                         <a href="#radsport" class="cursor-effect cursor-effect-velo">
-                            <img src="https://www.instagram.com/p/B0_C0mcBwIF/media?size=l" class="d-block w-100" alt="...">
+                            <img src="img/Tauchen2.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Radsport</h5>
                                 <p>Alles rund um das Biken.</p>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="carousel-item">
                         <a href="#Wintersprot" class="cursor-effect cursor-effect-snow audio-snow">
-                            <img src="https://www.instagram.com/p/BsQhNPzAxiG/media?size=l" class="d-block w-100" alt="...">
+                            <img src="img/Bild-Swisscom (1).jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Wintersport</h5>
                                 <p>Meine Aktivitäten im Wintersport.</p>
