--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <a href="#bitsch" class="cursor-effect cursor-effect-bitsch audio-bitsch">
-                            <img src="img/Tauchen1.jpg" class="d-block w-100" alt="...">
+                            <img src="img/thumbnail (2).jfif" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Lifestyle</h5>
-                                <p>Meine Reisen und Aktivitäten.</p>
+                                <h5>Über mich</h5>
+                                <p>Wer ich bin</p>
                             </div>
                         </a>
                     </div>
@@ -62,8 +62,8 @@
                         <a href="#radsport" class="cursor-effect cursor-effect-velo">
                             <img src="img/Tauchen2.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Radsport</h5>
-                                <p>Alles rund um das Biken.</p>
+                                <h5>Berufliche Erfarungen</h5>
+                                <p>Projekte und erfahrunegn</p>
                             </div>
                         </a>
 
@@ -72,8 +72,8 @@
                         <a href="#Wintersprot" class="cursor-effect cursor-effect-snow audio-snow">
                             <img src="img/Bild-Swisscom (1).jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Wintersport</h5>
-                                <p>Meine Aktivitäten im Wintersport.</p>
+                                <h5>Freizeit</h5>
+                                <p>Meine Aktivitäten in meiner Freizeit</p>
                             </div>
                         </a>
                     </div>
@@ -98,39 +98,33 @@
         <div class="row">
             <div class="col-sm">
                 <h1>Das bin ich</h1>
-                <p class="style1">Ich liebe es Biken zu gehn vor allem in Bikeparks.</p>
-                <p>Ich habe ein Specalized S-works Enduro. </p>
-                <p>Das Bike ist fast immer an meiner Seite.</p>
-                <p>Ich fahre vor allem Enduro da ich ein Enduro Bike besitze und da man es hier in der Schweiz sehr gut machen kann.
-        
-                </p>
-                <p>Ich spiele auch sehr gerne Tennis und ich bin im TC Erlen.
-                </p>
-                Ich gehe in die zweite Sekundarschule in Dielsdorf.
+                <p class="style1">Mein Name ist Alex Stern und bin im ersten Lehrjahr als Appliaktionsentwickler</p>
+                <p>Ich bin 16 Jahre alt und gehe in Winterthur in die Schule</p>
+                <p>In meiner Freizeit mache ich am liebsten Soprt mit Freunden oder alleine</p>
+                <p></p>
 
             </div>
         </div>
         <div class="row">
             <div id="bitsch" class="col-sm">
-                <h1>Lifestyle</h1>
-                <p>Ich gehe oft auf Reisen und teile sehr gerne meine Erfarungen mit der restlichen Welt. Ich habe schon viele Länder und Städte besucht wie: Barcelona, Brasilien, New York, Miami, Berlin, Wien, Mallorca, Dubai etc.
-                    hi </p>
+                <h1>Berufliche Erfahrungen</h1>
+                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution) wo ic die ersten drei Monate im Swisscom Shop Baden war und später im Förrlibuck wo ich viel mir Phyton und CSS arbeitet</p>
             </div>
         </div>
         <div class="row">
             <div id="radsport" class="col-sm">
-                <h1>Radsport</h1>
-                <p>Der Radsort ist meine Leidenschaft. Hauptstächlich fahre ich Enduro und Downhill aber nebenbei fahre
-                    ich auch sehr gerne BMX und Urban Freeride. Urban Freeride ist wenn man mit dem Bike in die Stadt
-                    geht und dort Treppen runterfährt und mit anderen Objekten Tricks macht</p>
+                <h1>Freizeit</h1>
+                <p>In meiner Freizeit mache ich meiner Meinung ein bisschen viel was dazu führt das ich viel Stress bekomme wenn ich nicht alles machen kann</p>
+                <p>Meine Hauptsportarten sind sicherlich das Tauchen, Biken, Powerlifting und Snowboarden.</p>
+                <p>Mit dem Tauchen fing ich erst im Frühling 2021 und der Grund dafür war das ich  mich schon immer sehr für das Meer interessiert habe sowie das ich die möglichkeit hatte für eine Tauchausbildung</p>
             </div>
         </div>
         <div class="row">
             <div id="Wintersprot" class="col-sm">
                 <h1>Wintersport</h1>
-                <p>Seit etwa drei Jahren fahre ich Snowboard, davor fuhr ich noch Ski aber ab dem Zeitpunkt wo ich
+                <p>Seit etwa sechs Jahren fahre ich Snowboard, davor fuhr ich noch Ski aber ab dem Zeitpunkt wo ich
                     das Snowboarden entdeckt habe wollte ich nicht mehr Ski fahren. Ich gehe regelmässig mit meiner
-                    Familie im Winter snowboarden nach Hasliberg, Wildhus, Lenzerheide und Engelberg.</p>
+                    Familie im Winter snowboarden nach Hasliberg, Flims/Laax, Lenzerheide und Engelberg.</p>
             </div>
         </div>
 
