--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <div class="row">
             <div class="col-sm">
                 <h1>Das bin ich</h1>
-                <p class="style1">Mein Name ist Alex Stern und bin im ersten Lehrjahr als Appliaktionsentwickler</p>
-                <p>Ich bin 16 Jahre alt und gehe in Winterthur in die Schule</p>
-                <p>In meiner Freizeit mache ich am liebsten Soprt mit Freunden oder alleine</p>
+                <p class="style1">Mein Name ist Alex Stern und bin im ersten Lehrjahr als Appliaktionsentwickler.</p>
+                <p>Ich bin 16 Jahre alt und gehe in Winterthur in die Schule.</p>
+                <p>In meiner Freizeit mache ich am liebsten Soprt mit Freunden oder alleine.</p>
                 <p></p>
 
             </div>
@@ -108,15 +108,18 @@
         <div class="row">
             <div id="bitsch" class="col-sm">
                 <h1>Berufliche Erfahrungen</h1>
-                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution) wo ic die ersten drei Monate im Swisscom Shop Baden war und später im Förrlibuck wo ich viel mir Phyton und CSS arbeitet</p>
+                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution) wo ic die ersten drei Monate im Swisscom Shop Baden war und später im Förrlibuck wo ich viel mit Phyton und CSS arbeitete.</p>
             </div>
         </div>
         <div class="row">
             <div id="radsport" class="col-sm">
                 <h1>Freizeit</h1>
-                <p>In meiner Freizeit mache ich meiner Meinung ein bisschen viel was dazu führt das ich viel Stress bekomme wenn ich nicht alles machen kann</p>
+                <p>In meiner Freizeit mache ich meiner Meinung ein bisschen viel was dazu führt das ich viel Stress bekomme wenn ich nicht alles machen kann.</p>
                 <p>Meine Hauptsportarten sind sicherlich das Tauchen, Biken, Powerlifting und Snowboarden.</p>
-                <p>Mit dem Tauchen fing ich erst im Frühling 2021 und der Grund dafür war das ich  mich schon immer sehr für das Meer interessiert habe sowie das ich die möglichkeit hatte für eine Tauchausbildung</p>
+                <p>Mit dem Tauchen fing ich erst im Frühling 2021 und der Grund dafür war das ich  mich schon immer sehr für das Meer interessiert habe sowie das ich die möglichkeit hatte für eine Tauchausbildung.</p>
+                <p>Jetzt bin ich schon Rescue Diver und habe über 30 Tauchgänge im See und im Meer.</p>
+                <p>Ich bike auch schon seit e und je. Ich besitze ein YT Jeffsy pro race und fahre garnicht gerne Bergauf nur wenn man dan auch einen auf einem coolen Trail herunter fahren kann.</p>
+                
             </div>
         </div>
         <div class="row">
