--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
 
         <div class="row">
             <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/B0SbySJh8MV/?utm_source=ig_web_copy_link" data-size="1600x1067">
+                <a href="img/Tauchen1_41.jpg" data-size="1600x1067">
                     <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/8ecfb3fbcea1d4659c8449ab07c6d82d/5E27EC0D/t51.2885-15/e35/67798587_158158052008837_5791253721439767292_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=101"
                         class="img-fluid">
                 </a>
