--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <p>Mit dem Tauchen fing ich erst im Frühling 2021 und der Grund dafür war das ich  mich schon immer sehr für das Meer interessiert habe sowie das ich die möglichkeit hatte für eine Tauchausbildung.</p>
                 <p>Jetzt bin ich schon Rescue Diver und habe über 30 Tauchgänge im See und im Meer.</p>
                 <p>Ich bike auch schon seit e und je. Ich besitze ein YT Jeffsy pro race und fahre garnicht gerne Bergauf nur wenn man dan auch einen auf einem coolen Trail herunter fahren kann.</p>
+                <p>Das Fitness genauer das Powerliting interessiert mich seit etwa 6 monaten. Das Fitness mache ich hauptstächlich um stress abzubauen und meinen Körper Fit zu machen/halten.</p>
                 
             </div>
         </div>
