--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#radsport" class="cursor-effect cursor-effect-velo">
                             <img src="img/Tauchen2.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Berufliche Erfarungen</h5>
+                                <h5>Projekte</h5>
                                 <p>Projekte und erfahrunegn</p>
                             </div>
                         </a>
@@ -107,8 +107,8 @@
         </div>
         <div class="row">
             <div id="bitsch" class="col-sm">
-                <h1>Berufliche Erfahrungen</h1>
-                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution) wo ic die ersten drei Monate im Swisscom Shop Baden war und später im Förrlibuck wo ich viel mit Phyton und CSS arbeitete.</p>
+                <h1>Projekte</h1>
+                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution). In den ersten drei Monaten war ich im Shop Baden wo ich die Schnittstelle zwischen Swisscom und Kunden miterleben durfte. Die restlichen neun Monate</p>
             </div>
         </div>
         <div class="row">
