--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         <div class="row">
             <div id="bitsch" class="col-sm">
                 <h1>Projekte</h1>
-                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution). In den ersten drei Monaten war ich im Shop Baden wo ich die Schnittstelle zwischen Swisscom und Kunden miterleben durfte. Die restlichen neun Monate</p>
+                <p>In meinem ersten Projekt war ich bei P2S(Problem to Solution). In den ersten drei Monaten war ich im Shop Baden wo ich die Schnittstelle zwischen Swisscom und Kunden miterleben durfte.</p>
+                <p> Die restlichen neun Monate war ich in einem Agilem Team wo wir mit Scrum gearbeitet haben. Ich habe erfahrung mit Python, HTML, CSS und TS.</p>
             </div>
         </div>
         <div class="row">
@@ -116,19 +117,11 @@
                 <h1>Freizeit</h1>
                 <p>In meiner Freizeit mache ich meiner Meinung ein bisschen viel was dazu führt das ich viel Stress bekomme wenn ich nicht alles machen kann.</p>
                 <p>Meine Hauptsportarten sind sicherlich das Tauchen, Biken, Powerlifting und Snowboarden.</p>
-                <p>Mit dem Tauchen fing ich erst im Frühling 2021 und der Grund dafür war das ich  mich schon immer sehr für das Meer interessiert habe sowie das ich die möglichkeit hatte für eine Tauchausbildung.</p>
+                <p>Mit dem Tauchen fing ich erst im Frühling 2021 und der Grund dafür war das ich  mich schon immer sehr für das Meer interessiert habe, sowie dass ich die möglichkeit hatte, für eine Tauchausbildung.</p>
                 <p>Jetzt bin ich schon Rescue Diver und habe über 30 Tauchgänge im See und im Meer.</p>
-                <p>Ich bike auch schon seit e und je. Ich besitze ein YT Jeffsy pro race und fahre garnicht gerne Bergauf nur wenn man dan auch einen auf einem coolen Trail herunter fahren kann.</p>
-                <p>Das Fitness genauer das Powerliting interessiert mich seit etwa 6 monaten. Das Fitness mache ich hauptstächlich um stress abzubauen und meinen Körper Fit zu machen/halten.</p>
+                <p>Ich bike auch schon seit e und je. Ich besitze ein YT Jeffsy pro race und fahre garnicht gerne Bergauf.</p>
+                <p>Das Fitness genauer das Powerliting interessiert mich seit etwa 6 monaten. Fitness mache ich hauptstächlich um stress abzubauen und meinen Körper Fit zu machen/halten.</p>
                 
-            </div>
-        </div>
-        <div class="row">
-            <div id="Wintersprot" class="col-sm">
-                <h1>Wintersport</h1>
-                <p>Seit etwa sechs Jahren fahre ich Snowboard, davor fuhr ich noch Ski aber ab dem Zeitpunkt wo ich
-                    das Snowboarden entdeckt habe wollte ich nicht mehr Ski fahren. Ich gehe regelmässig mit meiner
-                    Familie im Winter snowboarden nach Hasliberg, Flims/Laax, Lenzerheide und Engelberg.</p>
             </div>
         </div>
 
@@ -136,10 +129,10 @@
             <div class="col-sm-12 icon-links">
                 <a target="_blank" href="https://www.instagram.com/michjaeckson/?hl=de"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" href="https://github.com/Grasi-code/mywebsite"><i class="fab fa-github"></i></a>
-                <a target="_blank" href="mailto:alexanderstern776@gmail.com"><i class="far fa-envelope"></i></a>
+                <a target="_blank" href="mailto:alexander.stern@swisscom.com"><i class="far fa-envelope"></i></a>
                 <a target="_blank" href="https://www.youtube.com/channel/UCER7RcJEV-QiPdqMt9QF3NQ"><i class="fab fa-youtube"></i></a>
                 <a target="_blank" href="https://my.playstation.com/profile/grasitube"><i class="fab fa-playstation"></i></a>
-                <a target="_blank" href="https://linkedin.com/in/alexander-stern-9b239019b"><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/alexander-stern-9429a6219/"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </div>
