--- a/gallery.html
+++ b/gallery.html
@@ -43,45 +43,22 @@
 
         <div class="row">
             <figure class="col-md-4">
-                <a href="img/Tauchen1_41.jpg" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/8ecfb3fbcea1d4659c8449ab07c6d82d/5E27EC0D/t51.2885-15/e35/67798587_158158052008837_5791253721439767292_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=101"
+                <a href="https://www.instagram.com/p/CUzrXs5Mf87/" data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/tauchen4.jpg"
                         class="img-fluid">
                 </a>
             </figure>
 
             <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/BtYtdnUhD4h/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/42d3dc0729caab60c9af531a1c004332/5E317958/t51.2885-15/e35/51679259_1097454137081879_3602360610104614446_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=111"
+                <a href="https://www.instagram.com/stories/highlights/17866947047260733/" data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/snow.JPG"
                         class="img-fluid" />
                 </a>
             </figure>
 
             <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/BzDbpjtBY2k/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/c1889b3e8d523cc87e5327be670ed486/5E234305/t51.2885-15/e35/64369401_329940651284222_8725181454357557866_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=102"
-                        class="img-fluid" />
-                </a>
-            </figure>
-        </div>
-        <div class="row">
-
-            <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/BlyBttIApsJ/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/8b336fa2a48043872337b5ed36c66930/5E292AA8/t51.2885-15/e35/37810171_811559165899359_8673098636457934848_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=103"                  
-                        class="img-fluid" />
-                </a>
-            </figure>
-
-            <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/BaHmKQDlAiJ/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/6cacc9f995c2c1126dd4cdac9d83b9b0/5E6452C9/t51.2885-15/e35/22427001_1596993807041367_6751969493058060288_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=103"
-                        class="img-fluid" />
-                </a>
-            </figure>
-
-            <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/B3gwPuXhxe9/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/47f7e5ff62c167add6d6865743a469e2/5E2C7685/t51.2885-15/e35/73094102_205813540437225_2304214215748337166_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=109"
+                <a href="" data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/alex.jpg"
                         class="img-fluid" />
                 </a>
             </figure>
@@ -89,22 +66,45 @@
         <div class="row">
 
             <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/Bxpvesphs-T/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/dcc59d53fd9e97d1a1e609f5db3af69a/5E5C305C/t51.2885-15/e35/60264944_2229152140680024_8805662575721007342_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=100"
+                <a href="https://www.instagram.com/p/CJHCxe3hsPT/?utm_source=ig_web_copy_link" data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/alex2.jpg"                  
                         class="img-fluid" />
                 </a>
             </figure>
 
             <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/BuogNbkBnpZ/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/250e888d85721be62b19cebf596c8566/5E5E0FB3/t51.2885-15/e35/53352903_558149471371682_5947400971754507052_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=102"
+                <a href=" " data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/volley.JPG"
                         class="img-fluid" />
                 </a>
             </figure>
 
             <figure class="col-md-4">
-                <a href="https://www.instagram.com/p/BuogNbkBnpZ/?utm_source=ig_web_copy_link" data-size="1600x1067">
-                    <img alt="picture" src="https://instagram.fzrh1-1.fna.fbcdn.net/vp/76460972544623551a634e5a7fb3dff0/5E20A01D/t51.2885-15/e35/53822842_258146801732241_4488182011382918713_n.jpg?_nc_ht=instagram.fzrh1-1.fna.fbcdn.net&_nc_cat=109"
+                <a href=" " data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/alex3.jpg"
+                        class="img-fluid" />
+                </a>
+            </figure>
+        </div>
+        <div class="row">
+
+            <figure class="col-md-4">
+                <a href="https://www.instagram.com/p/CK-59GWB8ap/" data-size="1600x1067">
+                    <img alt="picture" src="img/me2.jpg"
+                        class="img-fluid" />
+                </a>
+            </figure>
+
+            <figure class="col-md-4">
+                <a href="https://www.instagram.com/p/CJHCxe3hsPT/" data-size="1600x1067">
+                    <img alt="picture" src="img/me.jpg"
+                        class="img-fluid" />
+                </a>
+            </figure>
+
+            <figure class="col-md-4">
+                <a href=" " data-size="1600x1067">
+                    <img alt="picture" src="img/pics/Saved Pictures/cat.JPG"
                         class="img-fluid" />
                 </a>
             </figure>
