--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <a href="#bitsch" class="cursor-effect cursor-effect-bitsch audio-bitsch">
-                            <img src="img/thumbnail (2).jfif" class="d-block w-100" alt="...">
+                            <img src="img/Bild-Swisscom (2).jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Über mich</h5>
                                 <p>Wer ich bin</p>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="carousel-item">
                         <a href="#radsport" class="cursor-effect cursor-effect-velo">
-                            <img src="img/Tauchen2.jpg" class="d-block w-100" alt="...">
+                            <img src="img/work.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Projekte</h5>
                                 <p>Projekte und erfahrunegn</p>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="carousel-item">
                         <a href="#Wintersprot" class="cursor-effect cursor-effect-snow audio-snow">
-                            <img src="img/Bild-Swisscom (1).jpg" class="d-block w-100" alt="...">
+                            <img src="img/pics/Saved Pictures/freedive.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Freizeit</h5>
                                 <p>Meine Aktivitäten in meiner Freizeit</p>
@@ -87,11 +87,6 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                <img src="https://www.instagram.com/p/B3MrcWUBjOc/media?size=l" class="rounded-circle" style="width: 80%; max-width: 250px" />
             </div>
         </div>
 
